--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                     <div class="logo-heart">
                         <img src="./images/heart 1.svg" alt="icon-heart" class="icon-nav">
                     </div>
+
+                    <!-- inner html -->
                     <div class="logo-car rigth-mar">
                         <button class="icon-nav direction direction-x" onclick="carBtn()"><img src="./images/car-principal.svg" alt="icon-car" class="icon-nav"></button>
                         <div class="car hidden-eight" id="car-list">        
@@ -62,8 +64,9 @@
                                     <h5 class="text-big">Carrito de compras</h5>
                                 </div>
                             </div>
-                            <div class="car-info">
-                                <div class="car-grid d-grid">
+                            <!-- Genear html a partir de aqui -->
+                            <div class="car-info" id="carritoC">
+                                <!-- <div class="car-grid d-grid">
                                     <div class="img-cel-mini">
                                         <img src="./images/image 1.jpg" alt="">
                                     </div>
@@ -88,13 +91,17 @@
                                 </div>
                                 <div class="car-price">
                                     <p class="color-light text-small">Total <span class="price-total bold">$5,200.00</span></p>
-                                </div>
-                                <div class="btn-pay">
-                                    <button>Proceder al pago</button>
-                                </div>
+                                </div> -->
+                            </div>  
+                            <!-- Genear html hasta aqui -->
+                            <div class="btn-pay">
+                                <button>Proceder al pago</button>
                             </div>
+                            
                         </div>
                     </div>
+
+                    <!-- inner html -->
 
                 </div>
 
@@ -249,16 +256,16 @@
                     <div class="card-info">
                         <div class="brand">
                             <h5 class="color-light">SAMSUNG</h5>
-                            <a class="bold color-dark">Galaxy S52</a>
+                            <a href="https://galaxy-s52.netlify.app/" class="bold color-dark">Galaxy S52</a>
                         </div>
                         <div class="price-car-flex">
                             <div class="price">
                                 <p class="color-light">Precio:</p>
                                 <p class="bold color-dark">$3,900.00</p>
                             </div>
-                            <div class="logo-car-one">
+                            <button class="logo-car-one" id="1" onclick="addCounter()">
                                 <img src="./images/shopping-cart 3.svg" alt="icon-car" class="icon-nav">
-                            </div>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -282,9 +289,9 @@
                                 <p class="color-light">Precio:</p>
                                 <p class="bold color-dark">$3,900.00</p>
                             </div>
-                            <div class="logo-car-one">
+                            <button class="logo-car-one" id="2">
                                 <img src="./images/shopping-cart 3.svg" alt="icon-car" class="icon-nav">
-                            </div>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -308,9 +315,9 @@
                                 <p class="color-light">Precio:</p>
                                 <p class="bold color-dark">$3,900.00</p>
                             </div>
-                            <div class="logo-car-one">
+                            <button class="logo-car-one" id="3">
                                 <img src="./images/shopping-cart 3.svg" alt="icon-car" class="icon-nav">
-                            </div>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -334,9 +341,9 @@
                                 <p class="color-light">Precio:</p>
                                 <p class="bold color-dark">$4,500.00</p>
                             </div>
-                            <div class="logo-car-one">
+                            <button class="logo-car-one" id="4">
                                 <img src="./images/shopping-cart 3.svg" alt="icon-car" class="icon-nav">
-                            </div>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -360,9 +367,9 @@
                                 <p class="color-light">Precio:</p>
                                 <p class="bold color-dark">$5,300.00</p>
                             </div>
-                            <div class="logo-car-one">
+                            <button class="logo-car-one" id="5">
                                 <img src="./images/shopping-cart 3.svg" alt="icon-car" class="icon-nav">
-                            </div>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -386,9 +393,9 @@
                                 <p class="color-light">Precio:</p>
                                 <p class="bold color-dark">$19,800.00</p>
                             </div>
-                            <div class="logo-car-one">
+                            <button class="logo-car-one" id="6">
                                 <img src="./images/shopping-cart 3.svg" alt="icon-car" class="icon-nav">
-                            </div>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -399,7 +406,7 @@
                             <img src="./images/heart 1.svg" alt="icon-heart" class="icon-nav">
                         </div>
                         <div class="card-img">
-                            <img src="./images/image 16.jpg" alt="image" class="img-cel">
+                            <img src="./images/image 16.jpg" alt="image" class=" cel-gordo">
                         </div>
                     </div>
                     <div class="card-info">
@@ -412,9 +419,9 @@
                                 <p class="color-light">Precio:</p>
                                 <p class="bold color-dark">$16,500.00</p>
                             </div>
-                            <div class="logo-car-one">
+                            <button class="logo-car-one" id="7">
                                 <img src="./images/shopping-cart 3.svg" alt="icon-car" class="icon-nav">
-                            </div>
+                            </button>
                         </div>
                     </div>
                 </div>
